--- a/front/src/components/MonsterDetail/monsterDetail.module.scss
+++ b/front/src/components/MonsterDetail/monsterDetail.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     width: 235px;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .section {
