--- a/front/src/components/PlaceDetail/placeDetail.module.scss
+++ b/front/src/components/PlaceDetail/placeDetail.module.scss
@@ -52,7 +52,7 @@
     grid-column: 1 / 3;
     margin-left: 0.5rem;
     font-family: $font-description;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-right: 1rem;
     width: 95%;
 }
