--- a/front/src/components/Section/section.module.scss
+++ b/front/src/components/Section/section.module.scss
@@ -62,7 +62,7 @@
 
 @media screen and (min-width: 1200px) {
     .main {
-        max-width: 800px;
+        max-width: 810px;
     }
 }
 
